# mandlebrot-generator

./: README.md
cpp/core/: CMakeLists.txt  main.cpp  task_parameters.h
cpp/device/publisher/: CMakeLists.txt  julia_function.h  main.cpp  publisher.h
cpp/device/subscriber/: CMakeLists.txt  main.cpp  mandlebrot_function.h  messages.h  subscriber.h
cpp/tester/fractal.xcodeproj/: project.pbxproj
cpp/tester/fractal.xcodeproj/project.xcworkspace/xcuserdata/banksti.xcuserdatad/: UserInterfaceState.xcuserstate
cpp/tester/fractal.xcodeproj/xcuserdata/banksti.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cpp/tester/fractal/include/fractal/: messages.h  ppm_stream.h  task_parameters.h
cpp/tester/fractal/src/: main.cpp
cpp/viewer/: .qmake.stash
cpp/viewer/mandelbrot/: mandelbrot.pro  mandelbrotwidget.cpp  mandelbrotwidget.h  renderthread.cpp  renderthread.h
cpp/viewer/mandelbrot/mandelbrot.app/Contents/: Info.plist
python/: generator.py  image_view.py  load_balancer.py  main.py  mandlebrot_function.py  messages.py  publisher.py  subscriber.py  task_parameters.py
